--- a/second/index.css
+++ b/second/index.css
@@ -24,7 +24,7 @@ body {
     border: 3px dotted #000000;
     height: 25%;
     margin: 3%;
-
+    padding: 10px;
 }
 
 #Bottom {
@@ -33,6 +33,7 @@ body {
     box-shadow: 5px 5px 5px #b8b8b8;
     margin: 0 auto;
     border: 1px solid #b8b8b8;
+    padding: 15px;
 
 }
 
@@ -57,5 +58,35 @@ body {
     left: 100px;
 }
 
+#blueCircle {
+    height: 150px;
+    width: 150px;
+    background: #14f3e8;
+    border-radius: 100%;
+    float: left;
+    margin: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 450px;
+}
+
+#innerBox {
+    width: 95%;
+    height: 95%;
+    background: #faee88;
+    margin: 5px auto;
+    box-shadow: 10px 10px 5px #252525;
+    margin: 0 auto;
+    border: 1px solid #faee88;
+}
+
+.Hello{
+    letter-spacing: 10px;
+    color: #00095c;
+    text-align: center;
+    padding: 0;
+    font-family: 'Muli', sans-serif;
+
+}
 
 
